# MyContextCarrier

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTEXTGENOS_FAQ.md  CONTEXTGENOS_PRIVACY.md  CONTEXTGENOS_README.md  CONTEXTGENOS_VS_RAG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  MANIFESTO.md  MYCONTEXTPORT_FAQ.md  MYCONTEXTPORT_PRIVACY.md  MYCONTEXTPORT_README.md  MYCONTEXTPORT_VS_RAG.md  README.md  SECURITY.md  collectors.toml.example  privacy.toml.example
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler-config.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  collector_request.yml  config.yml  feature_request.yml
.github/workflows/: auto-response.yml  ci.yml  collector-validation.yml  deploy-docs.yml  docker-release.yml  install-smoke.yml  labeler.yml  python-sdk-ci.yml  release.yml  stale.yml  workflow-sanity.yml
collectors/: REGISTRY.md
collectors/browser/: __main__.py  collector.py
collectors/calendar/: __main__.py  collector.py
collectors/calendar/tests/: test_collector.py
collectors/email/: __main__.py  collector.py
collectors/email/tests/: test_collector.py
collectors/notes/: __main__.py  collector.py
collectors/vscode/: __main__.py  collector.py
collectors/vscode/tests/: test_collector.py
crates/contextgenos-cli/: Cargo.toml
crates/contextgenos-cli/src/: lib.rs  main.rs
crates/contextgenos-core/: Cargo.toml
crates/contextgenos-core/src/: collector.rs  daemon.rs  error.rs  lib.rs
crates/contextgenos-graph/: Cargo.toml
crates/contextgenos-graph/src/: lib.rs
crates/contextgenos-mcp/: Cargo.toml
crates/contextgenos-mcp/src/: lib.rs
crates/contextgenos-privacy/: Cargo.toml
crates/contextgenos-privacy/src/: engine.rs
crates/contextgenos-store/: Cargo.toml
crates/contextgenos-store/src/: duck.rs  error.rs  lib.rs  schema.rs
crates/mycontextport-cli/: Cargo.toml
crates/mycontextport-cli/src/: lib.rs  main.rs  registry.rs  templates.rs  ui.rs
crates/mycontextport-core/: Cargo.toml
crates/mycontextport-core/src/: collector.rs  daemon.rs  error.rs  lib.rs  scheduler.rs
crates/mycontextport-core/src/collectors/: clipboard.rs  mod.rs  python_bridge.rs  shell_history.rs
crates/mycontextport-graph/: Cargo.toml
crates/mycontextport-graph/src/: extractor.rs  indexer.rs  lib.rs
crates/mycontextport-mcp/: Cargo.toml
crates/mycontextport-mcp/src/: lib.rs
crates/mycontextport-privacy/: Cargo.toml
crates/mycontextport-privacy/src/: engine.rs  error.rs  guardrails.rs  lib.rs  rule.rs
crates/mycontextport-store/: Cargo.toml
crates/mycontextport-store/src/: duck.rs  error.rs  lib.rs  schema.rs  types.rs
docs/: docusaurus.config.js  package.json  sidebars.js
docs/assets/: demo.tape
docs/docs/: quickstart.md
docs/docs/contributing/: first-contribution.md  writing-a-collector.md
docs/docs/privacy/: privacy-rules.md
docs/src/css/: custom.css
docs/src/pages/: index.js  index.module.css
scripts/: install.ps1  install.sh
sdk/python/: README.md  pyproject.toml
sdk/python/contextgenos/: __init__.py  collector.py  types.py
sdk/python/mycontextport/: __init__.py  collector.py  runner.py  types.py
sdk/python/tests/: test_base_collector.py
