[workspace]
resolver = "2"
members = [
    "crates/mycontextport-core",
    "crates/mycontextport-store",
    "crates/mycontextport-graph",
    "crates/mycontextport-mcp",
    "crates/mycontextport-privacy",
    "crates/mycontextport-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Kimmo Isbjörnssund"]
license = "MIT"
repository = "https://github.com/Kisbjornssund/MyContextCarrier"
homepage = "https://github.com/Kisbjornssund/MyContextCarrier"
documentation = "https://github.com/Kisbjornssund/MyContextCarrier"
rust-version = "1.85"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Storage
duckdb = { version = "1", features = ["bundled"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1"
thiserror = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# HTTP
axum = { version = "0.7", features = ["json"] }
reqwest = { version = "0.12", features = ["json"], default-features = false }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Cryptography
ring = "0.17"
base64 = "0.22"

# Configuration
config = "0.14"
toml = "0.8"

# Async trait support
async-trait = "0.1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
