[package]
name = "contextgenos-cli"
description = "ContextGenOS command-line interface"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "contextgenos"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }

contextgenos-core = { path = "../contextgenos-core" }
contextgenos-mcp = { path = "../contextgenos-mcp" }
