[package]
name = "contextgenos-core"
description = "ContextGenOS core daemon — orchestrates context collection, storage, and injection"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
dirs = { workspace = true }

contextgenos-store = { path = "../contextgenos-store" }
contextgenos-graph = { path = "../contextgenos-graph" }
contextgenos-privacy = { path = "../contextgenos-privacy" }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
