[package]
name = "contextgenos-mcp"
description = "MCP server — Model Context Protocol endpoint for AI tool integration"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

contextgenos-core = { path = "../contextgenos-core" }
contextgenos-privacy = { path = "../contextgenos-privacy" }
contextgenos-store = { path = "../contextgenos-store" }
