[package]
name = "contextgenos-store"
description = "Local context store — DuckDB structured storage and Qdrant vector search"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
duckdb = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
