[package]
name = "mycontextport-cli"
description = "MyContextPort command-line interface"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "mycontextport"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }

mycontextport-core = { path = "../mycontextport-core" }
mycontextport-mcp = { path = "../mycontextport-mcp" }
mycontextport-privacy = { path = "../mycontextport-privacy" }
mycontextport-store = { path = "../mycontextport-store" }
