[package]
name = "mycontextport-cli"
description = "MyContextPort command-line interface"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "mycontextport"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }

axum = { workspace = true }
tower-http = { workspace = true }
chrono = { workspace = true }
open = "5"

mycontextport-core = { path = "../mycontextport-core" }
mycontextport-graph = { path = "../mycontextport-graph" }
mycontextport-mcp = { path = "../mycontextport-mcp" }
mycontextport-privacy = { path = "../mycontextport-privacy" }
mycontextport-store = { path = "../mycontextport-store" }
