[package]
name = "mycontextport-graph"
description = "Context knowledge graph — entity relationships across collected context"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
regex = "1"

mycontextport-store = { path = "../mycontextport-store" }
